--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "namer"
 version = "0.1.0"
 authors = ["Simarpreet Singh <simar@linux.com>"]
 edition = "2018"
+description = "namer helps you name you projects"
 
 [dependencies]
 rand = "0.7.2"
