--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "namer"
-version = "0.1.1-alpha.0"
+version = "0.1.1"
 authors = ["Simarpreet Singh <simar@linux.com>"]
 edition = "2018"
 description = "namer helps you name you projects"
